--- a/Training-workspace/modules/gradebook/gradebook-service/build.gradle
+++ b/Training-workspace/modules/gradebook/gradebook-service/build.gradle
@@ -9,6 +9,8 @@ dependencies {
 	compileOnly project(":modules:gradebook:gradebook-api")
 	compileOnly group: "javax.portlet", name: "portlet-api"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api"
+	compileOnly group: "com.liferay", name: "com.liferay.portal.search.spi"
+ 	compileOnly group: "com.liferay", name: "com.liferay.portal.search.api"
 }
 
 buildService {
